2009-02-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.DesignerSupport/RemoteDesignerProcess.cs: Revert
	  Mike's commenting of unused method; it was in fact reflected
	  at runtime.

2009-02-07  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.DesignerSupport.csproj: Don't local-copy other
	  addins' dlls.

2009-02-07  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.DesignerSupport/BindingService.cs:
	* MonoDevelop.DesignerSupport.Toolbox/Toolbox.cs:
	* MonoDevelop.DesignerSupport/ErrorInFileException.cs:
	* MonoDevelop.DesignerSupport/RemoteDesignerProcess.cs:
	* MonoDevelop.DesignerSupport.Toolbox/ItemToolboxNode.cs:
	  Fixed compiler warnings.

2009-02-06  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.DesignerSupport.mdp:
	* MonoDevelop.DesignerSupport.csproj: Migrated to MSBuild file
	  format.

2009-02-04  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.DesignerSupport/BindingService.cs: Improve
	  method matching; it now finds methods with broader parameter
	  types. Tweak event/method matching API. Use ordinal string
	  compares.

2009-02-03  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.DesignerSupport/BindingService.cs: Require a
	  parent project for several methods, since getting it from
	  the IType was unreliable.

2009-02-03  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* MonoDevelop.DesignerSupport.addin.xml: Bump MD version.

2009-02-03  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.DesignerSupport.mdp: Use the system Mono.Cairo.

2009-02-03  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/generated.cs:
	*
	  gtk-gui/MonoDevelop.DesignerSupport.Toolbox.ComponentSelectorDialog.cs:
	  Flush.

2009-02-01  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am: Track changes in MD's assembly handling.
	  Mono.Cairo is no longer considered to be a "system"
	  assembly.

2009-01-26  Michael Hutchinson  <mhutchinson@novell.com>
